# prosjekt17

estimate_interest-master/: .gitignore  Readme.md
steinar-code/CyborgWorkspace/devel/: .catkin  .rosinstall  setup.sh
steinar-code/CyborgWorkspace/devel/include/speech_processing/: Expression.h
steinar-code/CyborgWorkspace/devel/include/trollnode/: Expression.h
steinar-code/CyborgWorkspace/devel/lib/pkgconfig/: speech_processing.pc  trollnode.pc
steinar-code/CyborgWorkspace/devel/lib/trollnode/: publishExpression  sendVideo  setExpression
steinar-code/CyborgWorkspace/devel/share/roseus/ros/speech_processing/: manifest.l
steinar-code/CyborgWorkspace/devel/share/roseus/ros/trollnode/: manifest.l
steinar-code/CyborgWorkspace/devel/share/speech_processing/cmake/: speech_processing-msg-extras.cmake  speech_processing-msg-paths.cmake  speech_processingConfig.cmake
steinar-code/CyborgWorkspace/devel/share/trollnode/cmake/: trollnode-msg-extras.cmake  trollnode-msg-paths.cmake  trollnodeConfig.cmake
steinar-code/CyborgWorkspace/src/trollnode-master/: Readme.md
steinar-code/CyborgWorkspace/src/trollnode-master/src/: sendVideo.cpp  setExpression.cpp
temp_ws/: client2  server  server.c  tcpserver.cpp  tingtataki
temp_ws/devel/: .catkin  .rosinstall  setup.sh
temp_ws/devel/include/cyborg_controller/: EmotionalFeedback.h  EmotionalState.h  EmotionalStateServiceRequest.h  EmotionalStateServiceResponse.h  StateMachineAction.h  StateMachineActionFeedback.h  StateMachineActionGoal.h  StateMachineActionResult.h  StateMachineFeedback.h  StateMachineGoal.h  StateMachineResult.h  SystemState.h
temp_ws/devel/include/estimate_interest/: DirectionStatus.h  PersonInfo.h  PersonsArray.h
temp_ws/devel/include/speech_processing/: Expression.h
temp_ws/devel/include/trollnode/: Expression.h
temp_ws/devel/lib/estimate_interest/: lookingNode  personNode
temp_ws/devel/lib/pkgconfig/: cyborg_controller.pc  estimate_interest.pc  set_emotion.pc  speech_processing.pc  trollnode.pc
temp_ws/devel/lib/python2.7/dist-packages/estimate_interest/msg/: _DirectionStatus.py  _PersonInfo.py  _PersonsArray.py  __init__.py
temp_ws/devel/lib/python2.7/dist-packages/speech_processing/msg/: _Expression.py
temp_ws/devel/lib/trollnode/: createExpression  publishExpression  sendVideo  setExpression
temp_ws/devel/share/cyborg_controller/cmake/: cyborg_controller-msg-extras.cmake  cyborg_controller-msg-paths.cmake  cyborg_controllerConfig.cmake
temp_ws/devel/share/estimate_interest/cmake/: estimate_interest-msg-extras.cmake  estimate_interest-msg-paths.cmake  estimate_interestConfig.cmake
temp_ws/devel/share/roseus/ros/cyborg_controller/: manifest.l
temp_ws/devel/share/roseus/ros/estimate_interest/: manifest.l
temp_ws/devel/share/roseus/ros/speech_processing/: manifest.l
temp_ws/devel/share/roseus/ros/trollnode/: manifest.l
temp_ws/devel/share/set_emotion/cmake/: set_emotionConfig.cmake
temp_ws/devel/share/speech_processing/cmake/: speech_processing-msg-paths.cmake  speech_processingConfig.cmake
temp_ws/devel/share/trollnode/cmake/: trollnode-msg-paths.cmake  trollnodeConfig.cmake
temp_ws/src/estimate-interest/include/: Person.h
temp_ws/src/estimate_interest/: CMakeLists.txt
temp_ws/src/estimate_interest/include/estimate_interest/: person.h
temp_ws/src/estimate_interest/msg/: DirectionStatus.msg  PersonInfo.msg  PersonsArray.msg
temp_ws/src/estimate_interest/src/: lookingNode.cpp  person.cpp
temp_ws/src/set_emotion/: CMakeLists.txt  package.xml
temp_ws/src/speech_processing/scripts/: communication.py
temp_ws/src/trollnode-master/: CMakeLists.txt  package.xml
temp_ws/src/trollnode-master/include/trollnode/: expression.h  expression_class.h  expression_templates.h
temp_ws/src/trollnode-master/src/: createExpression.cpp  expression.cpp  publishExpression.cpp  sendExpression.cpp  sendVideo.cpp  setExpression.cpp
trollnode-master/: CMakeLists.txt  package.xml
trollnode-master/msg/: Expression.msg
trollnode-master/src/: sendVideo.cpp  setExpression.cpp
(+27 files in other folders)
